2009-04-17  Mike Kestner  <mkestner@novell.com>

	* CBinding.csproj: don't require specific gtk-sharp version.

2009-04-15  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* CBinding.addin.xml: Bump MD version.

2009-03-13  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* gtk-gui/gui.stetic:
	* gtk-gui/CBinding.PackageDetails.cs: Making some strings not
	  translatable.

2009-03-04  Lluis Sanchez Gual  <lluis@novell.com>

	* Project/CProject.cs: Changed the way execution handlers
	  work. We are not using platform ids anymore. Instead, we use
	  command strings when looking for execution handlers.
	  IExecutionHandlerFactory has been removed and now everything
	  is handled by IExecutionHandler, which has a new CanExecute
	  method. This model is more simple and more generic.

2009-02-20  Michael Hutchinson  <mhutchinson@novell.com>

	* CBinding.csproj: Don't use 'make' to build.

2009-02-18  Mike Krüger  <mkrueger@novell.com>

	* Project/Package.cs:
	* Project/CProject.cs:
	* Compiler/ICompiler.cs:
	* Compiler/CCompiler.cs:
	* Compiler/GNUCompiler.cs: Fixed 'Bug 456971 - ${ProjectDir}
	  Not updating for currently building project'.

2009-02-07  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/CTextEditorExtension.cs: Rename second 'openingLine'
	  variable, as csc is more picky about multiple locals with
	  the same name in switches.

2009-02-07  Michael Hutchinson  <mhutchinson@novell.com>

	* CBinding.csproj: Flush MD's removal of newline at end of
	  file that was introduced by manually editing with gedit.

2009-02-07  Michael Hutchinson  <mhutchinson@novell.com>

	* CBinding.csproj: Remove invalid ApplicationIcon value that
	  broke the build in VS.

2009-02-07  Mike Krüger  <mkrueger@novell.com>

	* Parser/TagDatabaseManager.cs: fixed compiler warnings.

2009-02-06  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/generated.cs:
	* gtk-gui/CBinding.AddPathDialog.cs:
	* gtk-gui/CBinding.CompilerPanel.cs: